--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -2,9 +2,13 @@
     width: 56px;
     height: 56px;
     border-radius: 50%;
-    background: conic-gradient(#0000 10%, #474bff);
+    background: conic-gradient(#0000 10%, black);
     -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 9px), #000 0);
     animation: spinner-zp9dbg 1s infinite linear;
+    justify-content: center;
+    align-items: center;
+    margin-top: 350px;
+    margin-left: 700px;
 }
 
 @keyframes spinner-zp9dbg {
